# lip

./: .gitignore  ARCHITECTURE.md  Anchor.toml  Cargo.toml  README.md  package.json
migrations/: deploy.ts
programs/strategy/: Cargo.toml
programs/strategy/src/: errors.rs  lib.rs  rbac_helper.rs  scoring.rs  state.rs
programs/strategy/src/instructions/: evaluate.rs  initialize.rs  mod.rs  rebalance.rs  register_opportunity.rs
programs/strategy/src/integrations/: mock_amm.rs  mock_lending.rs  mod.rs
programs/user_management/: Cargo.toml
programs/user_management/src/: errors.rs  lib.rs  state.rs
programs/vault/: Cargo.toml
programs/vault/src/: errors.rs  lib.rs  rbac_helper.rs  state.rs
programs/vault/src/instructions/: deposit.rs  harvest.rs  initialize.rs  mod.rs  update_settings.rs  withdraw.rs  withdraw_fees.rs
tests/: integration.ts  rbac.ts  strategy.ts  vault.ts
